...
        }
        item {
            AddPictureButton(
                modifier = Modifier
                    .height(imageHeight)
                    .width(imageWidth)
                    .testTag("AddImage"),
                onClickAddImage = onClickAddImage,
            )
        }
        item {
            AddPictureButton(
                modifier = Modifier
...
    }
}

@Composable
fun ImageCard(
    modifier: Modifier = Modifier,
    image: Uri,
    elevation: Dp = 10.dp,
    shape: Shape = RoundedCornerShape(16.dp),
    onClickImage: () -> Unit
) {
    Card(
        modifier = modifier.clickable { onClickImage() }
...
