...
                Text(text = "Reset")
            }
            TextButton(
                onClick = onDoneClick,
                colors = ButtonDefaults.buttonColors()
            ) {
                Text(text = "Done")
            }
        }
    )
}

@OptIn(ExperimentalMaterialApi::class)
...
