<resources>
    <string name="app_name">Cook4Me</string>

    <!--  DatePicker  -->
    <string name="selected_date_text">Selected Date: </string>
    <string name="select_date_button">Select Date</string>

    <!--  TimePicker  -->
    <string name="selected_time_text">Selected Time: </string>
    <string name="select_time_button">Select Time</string>

    <!--  CreateEventScreen  -->
    <string name="ask_event_name">Name of the event</string>
    <string name="ask_event_description">Description of the event</string>
    <string name="ask_event_number_participants">Number of people</string>
    <string name="select_event">Select an event</string>
    <string name="explore_event">Explore event</string>

    <!--  CreateChallengeScreen  -->
    <string name="ask_challenge_name">Name of the challenge?</string>
    <string name="ask_challenge_description">Description of the challenge?</string>
    <string name="ask_challenge_type">Cooking genre: </string>

    <!-- CreateNewItemButton -->
    <string name="create_new_item_type">Create a new</string>
    <string name="event">Event</string>

    <!-- DetailedEventScreen -->
    <string name="event_name">Event name:</string>
    <string name="event_description">Event description:</string>
    <string name="event_max_participants">Max Participants:</string>
    <string name="event_creator">Creator:</string>
    <string name="event_time">Event time:</string>
    <string name="detailed_event_create_chat">Chat with event owner</string>

    <!-- CreateTupperwareScreen -->
    <string name="TupCreateFormTupName">Tupperware Name</string>
    <string name="TupCreateFormDesc">Description</string>
    <string name="ButtonRowCancel">Cancel</string>
    <string name="ButtonRowDone">Done</string>
    <string name="tupperware_field_description_error">Description cannot be blank</string>
    <string name="tupperware_field_name_error">Name cannot be blank</string>
    <string name="tupperware_field_image_error">Tupperware needs an image</string>


    <!-- SwipeScreen -->
    <string name="swipe_alldone_placeholder">all done</string>

    <!-- AddressInput   -->
    <string name="address_default_question">What is the location?</string>
    <string name="street_address_label">Street address</string>
    <string name="city_label">City</string>
    <string name="zip_code_label">Zip code</string>

    <!-- Login Screen -->
    <string name="sign_in_screen_sign_in_button">Sign in</string>
    <string name="sign_in_screen_register_button">Register</string>
    <string name="invalid_email_message">Invalid email!</string>
    <string name="password_blank">Password cannot be blank!</string>
    <string name="sign_in_screen_non_exist_user">User does not seem to exist!</string>
    <string name="sign_in_screen_wrong_password">Wrong password!</string>
    <string name="TAG_EMAIL_FIELD">EmailField</string>
    <string name="TAG_PASSWORD_FIELD">PasswordField</string>

    <!--  Profile -->
    <string name="tag_allergies">Allergies</string>
    <string name="tag_favoriteDish">Favorite dish</string>
    <string name="tag_bio">Bio</string>
    <string name="invalid_username_message">This username is not valid</string>
    <string name="tag_defaultProfileImage">defaultProfileImage</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tag_password">Password</string>
    <string name="tag_password_repeat">Repeat Password</string>
    <string name="tag_email">Email</string>

    <!-- Recipe Screen -->
    <string name="ingredientsTextFieldContentDesc">Ingredients Text field</string>
    <string name="ingredientsTextFieldPlaceholder">Add ingredients</string>
    <string name="RecipePreparationTitle">Preparation</string>
    <string name="RecipeStepsTextFieldPlaceholder">Add recipe steps</string>
    <string name="RecipeStepsTextFieldDesc">Recipe steps text field</string>
    <string name="RecipeNameTextFieldDesc">Recipe name text field</string>
    <string name="RecipeCreationRecipeTitle">Recipe name</string>
    <string name="RecipeNameTextFieldPlaceholder">Add recipe name</string>
    <string name="RecipeCreationIngredientsTitle">Ingredients</string>
    <string name="RecipeCreationScreenServingsTitle">Serves</string>
    <string name="RecipeCreationDifficultyTitle">Difficulty</string>
    <string name="RecipeCreationCookingTimeEntryTitle">Cooking Time</string>
    <string name="RecipeCreationCookingTimeDropDownMenuDesc">Cooking Time DropDownMenu</string>
    <string name="RecipeCreationDifficultyDropDownMenuDesc">Difficulty Drop Down Menu</string>
    <string name="RecipeCreationServingsTextFieldDesc">Servings Text Field</string>

    <!-- recipe feed -->
    <string name="get_top_recipes">Top recipes</string>
    <string name="get_recent_recipes">Most recent recipes</string>
    <string name="empty_recipe_feed">no recipe yet</string>

    <!-- tests -->
    <string name="label">label</string>
    <string name="question">question</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>

    <!-- Signup -->
    <string name="btn_continue">continue</string>
    <string name="sign_up_screen_top_bar_message">Enter Email and Password</string>
    <string name="sign_up_screen_password_not_identical">Passwords fields don\'t match</string>
    <string name="sign_up_screen_user_already_exists">User already exists</string>
    <string name="sign_up_screen_password_too_short">Password needs to be at least 6 characters long</string>
    <string name="sign_up_screen_firebase_exception">Request was not successful, please try again</string>
    <string name="sign_up_screen_password_again_field">Repeat password</string>
    <string name="Add_profile_infos_top_bar_message">Add your profile information</string>
    <string name="add_profile_infos_error">Something went wrong, please try again or skip the step</string>
    <string name="add_profile_finish">Finish</string>
    <string name="add_profile_skip_step">Skip step</string>
    <string name="sign_up_screen_tag">sign up screen</string>
    <string name="add_profile_info_screen_tag">add profile info screen</string>
    <string name="add_profile_name">What is your name?</string>
    <string name="add_profile_allergies">Do you have any allergies?</string>
    <string name="add_profile_favoriteDish">What is your favorite dish?</string>
    <string name="add_profile_bio">Tell us something about you</string>
    <string name="TAG_USER_FIELD">UserField</string>

    <!-- Permission -->
    <string name="permission_message_singular">The %1\$s permission is important. Please grant it for the app to function properly.</string>
    <string name="permission_message_plural">The following permissions are important: %1\$s. Please grant all of them for the app to function properly.</string>
    <string name="permission_message_singular_recommendation">The %1\$s permission will grant a better experience in the app</string>
    <string name="permission_message_plural_recommendation">The following permissions will grant a better experience in the app: %1\$s.</string>
    <string name="request_permissions">Request permissions</string>

    <!-- Chat -->
    <string name="Too_many_connection_error_title">Connection Error</string>
    <string name="Too_many_connection_error_message">Too many connections. Please try again later.</string>
    <string name="ChatErrorButtonText">OK</string>
    <string name="Channel_Screen_Tag">Channel Screen test TAG</string>

    <!-- BottomBar -->
    <string name="bottom_bar_more_button_text">More</string>
    <string name="bottom_bar_sign_out_text">Sign Out</string>
    <string name="tupperware_swipe_screen_tag">Tupperware Swipe Screen</string>
    <string name="create_tupper_screen_tag">Create Tupperware Screen</string>
    <string name="create_recipe_screen_tag">Create Recipe Screen</string>
    <string name="recipe_feed_screen_tag">Recipe Feed Screen</string>
    <string name="create_event_screen_tag">Create Event Screen</string>
    <string name="event_screen_tag">Event/Map Screen</string>
    <string name="detailed_event_screen_tag">Detailed Event Screen</string>
    <string name="profile_screen_tag">Profile Screen</string>
    <string name="edit_profile_screen_tag">Edit Profile Screen</string>
    <string name="login_screen_tag">Login Screen</string>

    <!--Challenges-->
    <string name="join">Join</string>
    <string name="challenge_finished">This challenge has already taken place</string>
    <string name="filter_button_text">Filter by</string>
    <string name="vote">Vote for other participants</string>
    <string name="see_votes">See results</string>
    <string name="empty_challenge_list">no challenge yet</string>
    <string name="filter_title_filterscreen">Filter by</string>
    <string name="sort_title_filterscreen">Sort by</string>
    <string name="searchbar_placeholder_text">Search…</string>

    <!-- Voting Screen --> voteScreenTitle
    <string name="voteScreenTitle">Vote for best participants</string>
    <string name="voteButton">Vote</string>

    <!-- Ranking Screen -->
    <string name="rankingScreenTitle">Ranking</string>
    <string name="score">Score</string>
    <string name="participant">Participant</string>
    <string name="place">Place</string>
    <string name="back">Back</string>
    <string name="winner">Winner</string>
    <string name="inform_offline_status">You are offline</string>
    <string name="to_swipe_go_online">You are offline, to keep swiping you need to go online</string>

    <!-- Loading Screen -->
    <string name="Loading_Screen_Tag">Loading Screen test tag</string>
    <string name="Loading_Screen_Text">Wait a sec!</string>

    <!-- Placeholder Screen -->
    <string name="placeholder_screen_content_description">placeholder screen</string>

    <!-- Match Dialogue -->
    <string name="match_dialogue_title">It\'s a match!</string>


</resources>